--- a/css/styles.css
+++ b/css/styles.css
@@ -582,3 +582,66 @@ img {
 .footer-soc-icon {
     fill:#f4f4fd;
 }
+
+.cont-footer-form {
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-form {
+    
+}
+
+.footer-label-edit {
+    display: flex;
+    flex-direction: column;
+}
+
+.footer-label {
+    
+    
+    color: #FFFFFF;
+font-size: 16px;
+font-weight: 500;
+line-height: 1,5;
+letter-spacing: 0.02em;
+margin-left: 80px;
+}
+
+input {
+    background-color: #2E2F42;
+    width: 264px;
+height: 40px;
+flex-shrink: 0;
+    border-radius: 4px;
+    border: 1px solid #FFFFFF;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+}
+
+input::placeholder {
+    color:#FFFFFF;
+}
+
+.footer-button {
+    width: 165px;
+    height: 40px;
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5; /* 150% */
+    letter-spacing: 0.04em;
+    background-color: #4D5AE5;
+    padding: 8px 24px;
+    display: inline-flex;
+    gap: 16px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 4px;
+    border: none;
+    margin-left: 24px;
+}
+
+.footer-button:hover, .footer-button:focus {
+    background-color:#404BBF ;
+}
