--- a/css/styles.css
+++ b/css/styles.css
@@ -586,62 +586,70 @@ img {
 .cont-footer-form {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .footer-form {
-    
-}
-
-.footer-label-edit {
     display: flex;
-    flex-direction: column;
+    gap: 24px;
+    
 }
 
-.footer-label {
-    
-    
+.form-text {
     color: #FFFFFF;
 font-size: 16px;
 font-weight: 500;
 line-height: 1,5;
 letter-spacing: 0.02em;
-margin-left: 80px;
+margin-bottom: 16px;
 }
 
-input {
-    background-color: #2E2F42;
+.footer-label {
+
+}
+
+.footer-input {
+    background-color: transparent;
     width: 264px;
-height: 40px;
-flex-shrink: 0;
+    height: 40px;
     border-radius: 4px;
     border: 1px solid #FFFFFF;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    font-size: 12px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    padding-left: 16px;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    color: #ffffff;
+
 }
 
-input::placeholder {
+.footer-input::placeholder {
     color:#FFFFFF;
 }
 
 .footer-button {
-    width: 165px;
+    min-width: 165px;
     height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: "Roboto", sans-serif;
     color: #FFFFFF;
     text-align: center;
     font-size: 16px;
     font-weight: 500;
     line-height: 1.5; /* 150% */
     letter-spacing: 0.04em;
+    cursor: pointer;
     background-color: #4D5AE5;
-    padding: 8px 24px;
-    display: inline-flex;
-    gap: 16px;
-    justify-content: center;
-    align-items: center;
     border-radius: 4px;
     border: none;
-    margin-left: 24px;
 }
 
 .footer-button:hover, .footer-button:focus {
     background-color:#404BBF ;
+}
+
+.icom-sub {
+    margin-left: 16px;
 }
