--- a/css/styles.css
+++ b/css/styles.css
@@ -586,20 +586,20 @@ img {
 .cont-footer-form {
     display: flex;
     justify-content: space-between;
-    flex-wrap: wrap;
+    flex-direction: column;
+    margin-left: 80px;
 }
 
 .footer-form {
     display: flex;
     gap: 24px;
-    
 }
 
 .form-text {
     color: #FFFFFF;
 font-size: 16px;
 font-weight: 500;
-line-height: 1,5;
+line-height: 1.5;
 letter-spacing: 0.02em;
 margin-bottom: 16px;
 }
@@ -633,6 +633,7 @@ margin-bottom: 16px;
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 16px;
     font-family: "Roboto", sans-serif;
     color: #FFFFFF;
     text-align: center;
@@ -644,12 +645,13 @@ margin-bottom: 16px;
     background-color: #4D5AE5;
     border-radius: 4px;
     border: none;
-}
-
-.footer-button:hover, .footer-button:focus {
-    background-color:#404BBF ;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icom-sub {
     margin-left: 16px;
+}
+
+.footer-button:hover, .footer-button:focus {
+    background-color:#404BBF ;
 }
