--- a/css/styles.css
+++ b/css/styles.css
@@ -672,14 +672,14 @@ margin-bottom: 16px;
     left: 50%;
     transform: translate(-50%, -50%) scale(1);
     width: 408px;
-    height: 584px;
+    min-height: 584px;
     border-radius: 4px;
     background-color: #FCFCFC;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     padding: 72px 24px 24px 24px; 
-    
 }
+
 .close-but {
     position: absolute;
     top: 24px;
@@ -706,9 +706,14 @@ margin-bottom: 16px;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.close-icon:hover, .close-icon:focus {
+.close-but:hover .close-icon {
     fill: #FFFFFF;
 }
+
+.close-but:focus .close-icon {
+    fill: #FFFFFF;
+}
+
 .text-modal {
     color: #2E2F42;
     text-align: center;
@@ -758,6 +763,11 @@ margin-bottom: 16px;
     top: 50%;
     transform: translateY(-50%);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.icon-sub {
+    margin-left: 16px;
 }
 
 .modal-input:focus .user-icon {
@@ -794,10 +804,6 @@ margin-bottom: 16px;
 
 .container-privacy{
     margin-bottom: 24px;
-}
-
-.privacy-input {
-    
 }
 
 .privacy-label {
