--- a/css/styles.css
+++ b/css/styles.css
@@ -702,6 +702,11 @@ margin-bottom: 16px;
     border: none;
 }
 
+.close-but:focus {
+    background-color: #404bbf;
+    border: none;
+}
+
 .close-icon {
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -755,6 +760,11 @@ margin-bottom: 16px;
     padding-left: 38px;
     outline: transparent;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input:focus .user-icon {
+    fill: #4D5AE5;
+
 }
 
 .user-icon {
@@ -838,6 +848,12 @@ margin-bottom: 16px;
     line-height: 16px;  
     letter-spacing: 0.04em;
     text-decoration-line: underline;
+}
+
+input[type="checkbox"]:checked .privacy-span {
+    background-color:#404bbf;
+    border: none;
+    fill:#F4F4FD;
 }
 
 .send-button {
