--- a/css/styles.css
+++ b/css/styles.css
@@ -762,7 +762,7 @@ margin-bottom: 16px;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-input:focus .user-icon {
+.modal-input:focus + .user-icon {
     fill: #4D5AE5;
 
 }
@@ -836,7 +836,7 @@ margin-bottom: 16px;
     fill: transparent;
 }
 
-.privacy-input:checked .privacy-span{
+.privacy-input:checked + .privacy-span{
     background-color:#404bbf;
     border: none;
     fill:#F4F4FD;
@@ -850,7 +850,7 @@ margin-bottom: 16px;
     text-decoration-line: underline;
 }
 
-input[type="checkbox"]:checked .privacy-span {
+.visually-hidden:checked .privacy-span {
     background-color:#404bbf;
     border: none;
     fill:#F4F4FD;
