--- a/css/styles.css
+++ b/css/styles.css
@@ -836,7 +836,7 @@ margin-bottom: 16px;
     fill: transparent;
 }
 
-.privacy-input:checked + .privacy-span{
+.privacy-input:checked .privacy-span{
     background-color:#404bbf;
     border: none;
     fill:#F4F4FD;
@@ -850,7 +850,7 @@ margin-bottom: 16px;
     text-decoration-line: underline;
 }
 
-.visually-hidden:checked + .privacy-span {
+input[name="user-privacy"]:checked + .privacy-span {
     background-color:#404bbf;
     border: none;
     fill:#F4F4FD;
