--- a/css/styles.css
+++ b/css/styles.css
@@ -664,8 +664,19 @@ margin-bottom: 16px;
     height: 100%;
     background-color: rgba(46, 47, 66, 0.4);
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+    visibility: hidden;
+    opacity: 0;
+    pointer-events: none;
 }
+
+
+.container-modal-window.is-open{
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+}
+
+
 .modal-window {
     position: absolute;
     top: 50%;
@@ -677,7 +688,7 @@ margin-bottom: 16px;
     background-color: #FCFCFC;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    padding: 72px 24px 24px 24px; 
+    padding: 72px 24px 24px 24px;
 }
 
 .close-but {
@@ -875,7 +886,5 @@ input[type="checkbox"]:checked + .privacy-label .privacy-span {
 }
 
 .is-hidden {
-    visibility: hidden;
-    opacity: 0;
-    pointer-events: none;
+
 }
